Fix z-index issue with filters

--- a/public/demo.css
+++ b/public/demo.css
@@ -216,6 +216,7 @@ body {
   padding: 3vh;
   position: fixed;
   width: 100%;
+  z-index: 1;
 }
 
 .linkage a {
